--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Homework-RA2",
-  "name": "Homework-RA2-Components",
+  "short_name": "ra-hw-2_events-state",
+  "name": "ra-hw-2_events-state-1-filter-2-layouts-3-dropdown",
   "icons": [
     {
       "src": "favicon.ico",
